<resources>
    <string name="app_name">VolleyBall</string>
    <string name="mode">隊形模式</string>
    <string name="user">隊員</string>
    <string name="teamname_settings">隊名</string>
    <string name="exit">離開</string>
    <string name="edit">編輯</string>
    <string name="detail">詳細</string>
    <string name="volleyball">排球</string>
    <string name="action_settings">雙舉</string>
    <string name="action_settings2">單舉</string>
    <string name="playername_settings">名字</string>
    <string name="player_location_settings">位置</string>
    <string name="player_location_free">自由</string>
    <string name="player_location_weapon">大砲</string>
    <string name="player_location_middle">攔中</string>
    <string name="player_location_rase">舉球</string>
    <string name="player_height_settings">高度</string>
    <string name="player_missRate_settings">失誤率</string>
    <string name="player_getRate_settings">得分率</string>

    <string name="volleyballInfo">隊伍資訊</string>
    <string name="schedule">排球記事</string>
    <string name="record">比賽紀錄</string>
    <string name="module">隊形模擬</string>
    <string name="attack">攻擊</string>
    <string name="defense">防守</string>
    <string name="add">新增</string>
    <string name="back">返回</string>
    <string name="update">更改</string>
    <string name="delete">刪除</string>
    <string name="please_select_mode">請選擇模式</string>
    <string name="not_alloc">分配失敗，人數不足</string>
    <string name="please_allocate_player">請分配隊員</string>
    <string name="allocated">已分配完成</string>
    <string name="player_used">隊員已用過</string>
    <string name="turn">往右輪</string>
    <string name="calendar">日曆</string>
    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="note">備註</string>
    <string name="pratice">練習</string>
    <string name="race">比賽</string>
    <string name="other">其他</string>
    <string name="complete">請選擇一個按鈕</string>
    <string name="open_navigation">打開NV</string>
    <string name="close_navigation">關閉</string>
    <string name="team_my_fight">我方隊名</string>
    <string name="team_fight">對方隊名</string>
    <string name="start">開始</string>
    <string name="three">三局</string>
    <string name="board">局數</string>
    <string name="five">五局</string>
    <string name="restart">重新開始</string>
    <string name="allocate_player">分配隊員</string>
    <string name="first">第一局</string>
    <string name="second">第二局</string>
    <string name="third">第三局</string>
    <string name="forth">第四局</string>
    <string name="fifth">第五局</string>
    <string name="finish">這局結束</string>
    <string name="totalfinish">這場結束</string>
    <string name="yes">確定</string>
    <string name="record_item">記錄項目選擇</string>
    <string name="get">得分</string>
    <string name="lose">失分</string>
    <string name="all">全選</string>
    <string name="finish_record">結束紀錄</string>

    <string name="startBall">發球</string>
    <string name="middle">攔網</string>
    <string name="touch">觸網</string>
    <string name="over">越界</string>
    <string name="be_attacked">對方攻擊得分</string>
    <string name="over_att">越網擊球</string>


    <string-array name="location">
        <item>自由</item>
        <item>大砲</item>
        <item>攔中</item>
        <item>舉球</item>
    </string-array>
</resources>
